--- a/main/package.json
+++ b/main/package.json
@@ -15,9 +15,9 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "typescript": "4.9.5"
   },
